--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-      <title>Example</title>
+      <title>The Forgiveness Project(ion)</title>
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
       <!-- Do not add `link` tags-->
@@ -12,6 +12,44 @@
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
     <body>
-      <h1>Browser Template</h1>
+      <h1>the forgiveness project(ion)</h1>
+      <form id='sign-up'>
+        <fieldset>
+          <legend>Sign up!</legend>
+          <input name='credentials[email]' type='email' placeholder="email">
+          <input name='credentials[password]' type='password' placeholder="password">
+          <input name='credentials[password_confirmation]' type='password' placeholder="confirm password">
+          <input type='submit' value='sign up!'>
+        </fieldset>
+      </form>
+      <form id='sign-in'>
+        <fieldset>
+          <legend>Sign in!</legend>
+          <input name='credentials[email]' type='email' placeholder="person@site.com">
+          <input name='credentials[password]' type='password' placeholder="p4ssw0rd143">
+          <input type='submit' value='sign in!'>
+        </fieldset>
+      </form>
+      <form id='change-password'>
+        <fieldset>
+          <legend>Change password!</legend>
+          <input name='passwords[old]' type='password' placeholder="old p4ssw0rd143">
+          <input name='passwords[new]' type='password' placeholder="new p4ssw0rd143">
+          <input type='submit' value='change password!'>
+        </fieldset>
+      </form>
+      <form id='sign-out'>
+        <fieldset>
+          <legend>Sign out!</legend>
+          <input type='submit' value='Sign out!'>
+        </fieldset>
+      </form>
+      <p id='message'></p>
+      <div id="message-board" class="container">
+        <div class="row">
+          <div data-cell-index='0' class="col-12 box"></div>
+        </div>
+      </div>
+      <footer>Copyright 2020 Ash Grevelink</footer>
     </body>
 </html>
