SPA to hide/show create post button/form
Shows create post button on sign-in.
Hides create post button when clicked and shows the create form.

--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         </fieldset>
       </form>
       <p id='message'></p>
-      <button id='create-button' class='btn btn-primary'>Create Post</button>
-      <form id='create-form'>
+      <button id='create-post-button' class='btn btn-primary'>Create Post</button>
+      <form id='create-post-form'>
         <fieldset>
           <legend>Create a post!</legend>
           <label>Title:</label>
@@ -61,7 +61,7 @@
           <input type='submit' value='create post!'>
         </fieldset>
       </form>
-      <div id="message-board" class="container">
+      <div id="post-board" class="container">
         <div class="row">
           <div data-cell-index='0' class="col-12 box"></div>
         </div>
