--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
         </fieldset>
       </form>
       <p id='message'></p>
+      <button id='index-posts-button' class='btn btn-primary'>Show Posts</button>
       <button id='create-post-button' class='btn btn-primary'>Create Post</button>
       <form id='create-post-form'>
         <fieldset>
