Index posts working
Show list of posts with title, author and body

--- a/index.html
+++ b/index.html
@@ -62,11 +62,7 @@
           <input type='submit' value='create post!'>
         </fieldset>
       </form>
-      <div id="post-board" class="container">
-        <div class="row">
-          <div data-cell-index='0' class="col-12 box"></div>
-        </div>
-      </div>
+      <div id="post-board" class="post-board container"></div>
       <footer>Copyright 2020 Ash Grevelink</footer>
     </body>
 </html>
