--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           <input type='submit' value='create post!'>
         </fieldset>
       </form>
-      <div id="post-board" class="post-board container"></div>
+      <main>
+        <div id="post-board" class="post-board container"></div>
+      </main>
       <footer>Copyright 2020 Ash Grevelink</footer>
     </body>
 </html>
