Delete is working properly
Reloads posts properly

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <input name='author' type='text' placeholder="name/alias/historical figure">
           <br>
           <label>Body:</label>
-          <textarea name='body' placeholder="here goes nothing!"></textarea>
+          <textarea name='body' type='text' placeholder="here goes nothing!"></textarea>
           <br>
           <input type='submit' value='create post!'>
         </fieldset>
