Shows update form but doesn't successfully do AJAX

--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
           <input type='submit' value='create post!'>
         </fieldset>
       </form>
+      <form id='edit-post-form'>
+        <fieldset>
+          <legend>Edit your post!</legend>
+          <label>Title:</label>
+          <input name='title' type='text' placeholder="title">
+          <br>
+          <label>Author:</label>
+          <input name='author' type='text' placeholder="name/alias/historical figure">
+          <br>
+          <label>Body:</label>
+          <textarea name='body' type='text' placeholder="here goes nothing!"></textarea>
+          <br>
+          <input type='submit' value='edit post!'>
+        </fieldset>
+      </form>
       <main>
         <div id="post-board" class="post-board container"></div>
       </main>
