Add sticky footer & content full page width
https://startbootstrap.com/snippets/sticky-footer-flexbox/
container-fluid classes

--- a/index.html
+++ b/index.html
@@ -11,66 +11,70 @@
       <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
       <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
     </head>
-    <body class="container">
-      <header class="col-xs-12 col-md-12">
-        <h1>the forgiveness project(ion)</h1>
-      </header>
-      <main>
-        <section id="user-actions" class="col-xs-12 col-md-4">
-          <p id="message"></p>
-          <form id="sign-up">
-            <fieldset>
-              <legend>Sign up!</legend>
-              <input name='credentials[email]' type='email' placeholder="email">
-              <input name='credentials[password]' type='password' placeholder="password">
-              <input name='credentials[password_confirmation]' type='password' placeholder="confirm password">
-              <input type='submit' value='sign up!'>
-            </fieldset>
-          </form>
-          <form id="sign-in">
-            <fieldset>
-              <legend>Sign in!</legend>
-              <input name='credentials[email]' type='email' placeholder="person@site.com">
-              <input name='credentials[password]' type='password' placeholder="p4ssw0rd143">
-              <input type='submit' value='sign in!'>
-            </fieldset>
-          </form>
-          <form id="change-password">
-            <fieldset>
-              <legend>Change password!</legend>
-              <input name='passwords[old]' type='password' placeholder="old p4ssw0rd143">
-              <input name='passwords[new]' type='password' placeholder="new p4ssw0rd143">
-              <input type='submit' value='change password!'>
-            </fieldset>
-          </form>
-          <form id="sign-out">
-            <fieldset>
-              <legend>Sign out!</legend>
-              <input type='submit' value='Sign out!'>
-            </fieldset>
-          </form>
-          <button id="index-posts-button" class="btn btn-primary">My Posts</button>
-          <button id="create-post-button" class="btn btn-primary">Create Post</button>
-        </section>
-        <section id="post-form" class="modal hidden">
-          <form>
-            <fieldset>
-              <legend>Create a post!</legend>
-              <label>Title:</label>
-              <input name='title' type='text' placeholder="title">
-              <br>
-              <label>Author:</label>
-              <input name='author' type='text' placeholder="name/alias/historical figure">
-              <br>
-              <label>Body:</label>
-              <textarea name='body' placeholder="here goes nothing!"></textarea>
-              <br>
-              <input type='submit' value='create post!'>
-            </fieldset>
-          </form>
-        </section>
-        <section id="post-board" class="col-xs-12 col-md-8"></section>
-      </main>
-      <footer id="footer" class="col-xs-12 col-md-12">Copyright 2020 Ash Grevelink</footer>
+    <body class="d-flex flex-column">
+      <div class="page-content">
+        <header>
+          <h1>the forgiveness project(ion)</h1>
+        </header>
+        <main class="container-fluid">
+          <section id="user-actions" class="col-xs-12 col-md-4">
+            <p id="message"></p>
+            <form id="sign-up">
+              <fieldset>
+                <legend>Sign up!</legend>
+                <input name='credentials[email]' type='email' placeholder="email">
+                <input name='credentials[password]' type='password' placeholder="password">
+                <input name='credentials[password_confirmation]' type='password' placeholder="confirm password">
+                <input type='submit' value='sign up!'>
+              </fieldset>
+            </form>
+            <form id="sign-in">
+              <fieldset>
+                <legend>Sign in!</legend>
+                <input name='credentials[email]' type='email' placeholder="person@site.com">
+                <input name='credentials[password]' type='password' placeholder="p4ssw0rd143">
+                <input type='submit' value='sign in!'>
+              </fieldset>
+            </form>
+            <form id="change-password">
+              <fieldset>
+                <legend>Change password!</legend>
+                <input name='passwords[old]' type='password' placeholder="old p4ssw0rd143">
+                <input name='passwords[new]' type='password' placeholder="new p4ssw0rd143">
+                <input type='submit' value='change password!'>
+              </fieldset>
+            </form>
+            <form id="sign-out">
+              <fieldset>
+                <legend>Sign out!</legend>
+                <input type='submit' value='Sign out!'>
+              </fieldset>
+            </form>
+            <button id="index-posts-button" class="btn btn-primary">My Posts</button>
+            <button id="create-post-button" class="btn btn-primary">Create Post</button>
+          </section>
+          <section id="post-form" class="modal hidden">
+            <form>
+              <fieldset>
+                <legend>Create a post!</legend>
+                <label>Title:</label>
+                <input name='title' type='text' placeholder="title">
+                <br>
+                <label>Author:</label>
+                <input name='author' type='text' placeholder="name/alias/historical figure">
+                <br>
+                <label>Body:</label>
+                <textarea name='body' placeholder="here goes nothing!"></textarea>
+                <br>
+                <input type='submit' value='create post!'>
+              </fieldset>
+            </form>
+          </section>
+          <section id="post-board" class="col-xs-12 col-md-8"></section>
+        </main>
+      </div>
+      <footer class="sticky-footer container-fluid text-center py-4 bg-dark text-white-50">
+        Copyright 2020 Ash Grevelink
+      </footer>
     </body>
 </html>
