Bootstrap grid working
Layout looking like wireframe. Very happy.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header>
           <h1>the forgiveness project(ion)</h1>
         </header>
-        <main class="container-fluid">
+        <main class="container-fluid row">
           <section id="user-actions" class="col-xs-12 col-md-4">
             <p id="message"></p>
             <form id="sign-up">
@@ -70,7 +70,38 @@
               </fieldset>
             </form>
           </section>
-          <section id="post-board" class="col-xs-12 col-md-8"></section>
+          <section id="post-board" class="col-xs-12 col-md-8">
+            <div>
+              <h2>title</h2>
+              <h3>author</h3>
+              <p>Donec id elit non mi porta gravida at eget metus.
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Etiam porta sem malesuada magna mollis euismod. Donec sed
+                odio dui.
+              </p>
+            </div>
+            <div>
+              <h2>title</h2>
+              <h3>author</h3>
+              <p>Donec id elit non mi porta gravida at eget metus.
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Etiam porta sem malesuada magna mollis euismod. Donec sed
+                odio dui.
+              </p>
+            </div>
+            <div>
+              <h2>title</h2>
+              <h3>author</h3>
+              <p>Donec id elit non mi porta gravida at eget metus.
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Etiam porta sem malesuada magna mollis euismod. Donec sed
+                odio dui.
+              </p>
+            </div>
+          </section>
         </main>
       </div>
       <footer class="sticky-footer container-fluid text-center py-4 bg-dark text-white-50">
