Add background colors for easy layout

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>the forgiveness project(ion)</h1>
         </header>
         <main class="container-fluid row">
-          <section id="user-actions" class="col-xs-12 col-md-4">
+          <section id="user-actions" class="user-actions col-xs-12 col-md-4">
             <p id="message"></p>
             <form id="sign-up">
               <fieldset>
@@ -71,7 +71,7 @@
             </form>
           </section>
           <section id="post-board" class="col-xs-12 col-md-8">
-            <div>
+            <div class="box">
               <h2>title</h2>
               <h3>author</h3>
               <p>Donec id elit non mi porta gravida at eget metus.
@@ -81,7 +81,7 @@
                 odio dui.
               </p>
             </div>
-            <div>
+            <div class="box">
               <h2>title</h2>
               <h3>author</h3>
               <p>Donec id elit non mi porta gravida at eget metus.
@@ -91,7 +91,37 @@
                 odio dui.
               </p>
             </div>
-            <div>
+            <div class="box">
+              <h2>title</h2>
+              <h3>author</h3>
+              <p>Donec id elit non mi porta gravida at eget metus.
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Etiam porta sem malesuada magna mollis euismod. Donec sed
+                odio dui.
+              </p>
+            </div>
+            <div class="box">
+              <h2>title</h2>
+              <h3>author</h3>
+              <p>Donec id elit non mi porta gravida at eget metus.
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Etiam porta sem malesuada magna mollis euismod. Donec sed
+                odio dui.
+              </p>
+            </div>
+            <div class="box">
+              <h2>title</h2>
+              <h3>author</h3>
+              <p>Donec id elit non mi porta gravida at eget metus.
+                Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus.
+                Etiam porta sem malesuada magna mollis euismod. Donec sed
+                odio dui.
+              </p>
+            </div>
+            <div class="box">
               <h2>title</h2>
               <h3>author</h3>
               <p>Donec id elit non mi porta gravida at eget metus.
