--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <h1>the forgiveness project(ion)</h1>
         </header>
         <main class="container-fluid row main">
-          <section id="user-actions" class="user-actions col-xs-12 col-md-4">
+          <section class="user-actions col-xs-12 col-md-4">
             <p id="message"></p>
             <form id="sign-up">
               <fieldset>
@@ -54,9 +54,7 @@
             <button id="index-all-posts-button" class="btn btn-primary">All Posts</button>
             <button id="create-post-button" class="btn btn-primary">Create Post</button>
           </section>
-          <section id="post-board" class="col-xs-12 col-md-8">
-          </section>
-          <section id="post-form" class="col-xs-12 col-md-8">
+          <section id="post-content" class="col-xs-12 col-md-8">
           </section>
         </main>
       </div>
