Refactor to provide messaging after each user action
Comment the code.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </main>
       </div>
       <footer class="sticky-footer container-fluid text-center py-4 bg-dark text-white-50">
-        Copyright 2020 Ash Grevelink
+        Copyright 2020 - Ash Grevelink
       </footer>
     </body>
 </html>
