Finish MVP styling

--- a/index.html
+++ b/index.html
@@ -36,23 +36,42 @@
                 <input type='submit' class="form-control" value='sign in!'>
               </fieldset>
             </form>
-            <form id="change-password">
+            <form id="change-password" class="form-group">
               <fieldset>
                 <legend>Change password!</legend>
-                <input name='passwords[old]' type='password' placeholder="old p4ssw0rd143">
-                <input name='passwords[new]' type='password' placeholder="new p4ssw0rd143">
-                <input type='submit' value='change password!'>
+                <input name='passwords[old]' class="form-control" type='password' placeholder="old p4ssw0rd143">
+                <input name='passwords[new]' class="form-control" type='password' placeholder="new p4ssw0rd143">
+                <input type='submit' class="form-control" value='change password!'>
               </fieldset>
             </form>
-            <form id="sign-out">
+            <form id="sign-out" class="form-group">
               <fieldset>
                 <legend>Sign out!</legend>
-                <input type='submit' value='Sign out!'>
+                <input type='submit' class="form-control" value='Sign out!'>
               </fieldset>
             </form>
             <button id="index-my-posts-button" class="btn btn-primary">My Posts</button>
             <button id="index-all-posts-button" class="btn btn-primary">All Posts</button>
             <button id="create-post-button" class="btn btn-primary">Create Post</button>
+            <section class="intro">
+              <p>Join the forgiveness project, a simple way to project something
+                you want to forgive from the past or future and come into the temple of the now. :)
+              </p>
+              <p>"Before you enter the temple, forgive." <br> -Jesus</p>
+              <p>
+                "The whole essence of Zen consists in walking along the razor’s edge of Now — to be so utterly,
+                so completely present that no problem, no suffering, nothing that is not who you are in your
+                essence, can survive in you. In the Now, in the absence of time, all your problems dissolve.
+                Suffering needs time; it cannot survive in the Now. The great Zen master Rinzai, in order to
+                take his students’ attention away from time, would often raise his finger and slowly ask:
+                What, at this moment, is lacking? A powerful question that does not require an answer on
+                the level of the mind. It is designed to take your attention deeply into the Now. A similar
+                question in the Zen tradition is this: If not now, when?"
+                <br>
+                <br>
+                Eckart Tolle | The Power of Now | page 52
+              </p>
+            </section>
           </section>
           <section id="post-content" class="col-xs-12 col-md-8">
           </section>
