Change button colors

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
                 <input type='submit' class="form-control" value='Sign out!'>
               </fieldset>
             </form>
-            <button id="index-my-posts-button" class="btn btn-primary">My Posts</button>
-            <button id="index-all-posts-button" class="btn btn-primary">All Posts</button>
-            <button id="create-post-button" class="btn btn-primary">Create Post</button>
+            <button id="index-my-posts-button" class="btn btn-dark">My Posts</button>
+            <button id="index-all-posts-button" class="btn btn-dark">All Posts</button>
+            <button id="create-post-button" class="btn btn-dark">Create Post</button>
             <section class="intro">
               <p>Join the forgiveness project, a simple way to project something
                 you want to forgive from the past or future and come into the temple of the now. :)
