Add text about anonymous posts

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <section class="intro">
               <p>Join the forgiveness project, a simple way to project something
                 you want to forgive from the past or future and come into the temple of the now. :)
+                Feel free to sign up with a fake email, e.g. "aaa@aaa.com" and make
+                some anonymous posts. Thanks!
               </p>
               <p>"Before you enter the temple, forgive." <br> -Jesus</p>
               <p>
